# marimo-jax-onnx-demo

./: .gitignore  CLAUDE.md  README.md  SPEC.md  demo.py  pyproject.toml  train_export.py
.github/workflows/: deploy.yml
public/: model.onnx  training_data.npz
tests/: test_export.py  test_notebook_helpers.py  test_training.py
